--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -38,16 +38,16 @@
   );
 
   /* Sidebar */
-  --site-title-color: rgb(113, 113, 113);
+  --site-title-color: rgb(255, 255, 255);
   --site-subtitle-color: #717171;
   --sidebar-bg: #f6f8fa;
-  --sidebar-border-color: #efefef;
+  --sidebar-border-color: #292929;
   --sidebar-muted-color: #545454;
-  --sidebar-active-color: #1d1d1d;
-  --sidebar-hover-bg: rgb(223, 233, 241, 0.64);
+  --sidebar-active-color: #77F6F8;
+  --sidebar-hover-bg: #121316;
   --sidebar-btn-bg: white;
   --sidebar-btn-color: #8e8e8e;
-  --avatar-border-color: white;
+  --avatar-border-color: rgb(0, 0, 0);
 
   /* Topbar */
   --topbar-bg: rgb(255, 255, 255, 0.7);
